Archive2/2b/ac749ecb1709cb/output
main.cpp:5:69: error: enumerator value 9223372036854775808ul is outside the range of underlying type 'int64_t {aka long int}'
 enum class Foo : int64_t { a = std::numeric_limits<int64_t>::max(), b };
                                                                     ^
